# pp_game_server

./: Cargo.toml  buf.gen.yaml  buf.work.yaml  docker-compose.yml  readme.md
migrations/2024-05-31-013825_create_users/: down.sql  up.sql
proto/: auth.proto  buf.yaml  pp_message.proto  room.proto
proto/actions/: add_player.proto  broadcast_ball.proto  broadcast_winner.proto  get_rooms.proto  host_room.proto  quit_player.proto  reconnect.proto  remove_player.proto  set_player_ready.proto  start_next_round.proto  unsubscribe.proto
proto/datastreams/: game_events.proto  room_events.proto
proto/models/: color.proto  game_event.proto  game_subscription.proto  max_size.proto  paddle.proto  paddle_direction.proto  player.proto  room.proto  room_event.proto  room_subscription.proto  settings.proto
src/: auth.rs  main.rs  room_manager.rs  token_err.rs  user.rs
src/auth/: auth_service.rs  mod.rs  session.rs  token_err.rs
src/data/: connection_data.rs  game_event_sub.rs  mod.rs  player.rs  room.rs  room_event_sub.rs
src/database/: conn.rs  models.rs  schema.rs
src/room/: mod.rs  room_manager.rs  user_management.rs
src/service/: mod.rs  pipo_service.rs  pipo_streaming_service.rs
src/utils/: constants.rs  mod.rs  room_utils.rs  sub_utils.rs
