[package]
name = "pp_server"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1.6", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
prost = "0.12.6"
protobuf = "3.4.0"
serde = "1.0.203"
tokio = { version = "1.38.0", features = ["full"] }
protos = { path = "./gen" }
bcrypt = "0.15.1"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
tonic = "0.11.0"
pbjson-types = "0.6.0"
lazy_static = "1.4.0"
tokio-stream = "0.1.15"
rand = "0.8.5"
